--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<h4>BLOGGING</h4>
 								<img src="images/sm4.jfif" alt="" width="400" height="400" />
 								<h4>ARTICLE</h4>
-								<img src="images/sm1.jfif" alt="" width="400" height="400" />
+								<img src="images/SM1.jfif" alt="" width="400" height="400" />
 								<h4>INTERSHIP</h4>
 								<img src="images/SM2.jfif" alt="" width="400" height="400" />
 								
